<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Add member search -->
    <string name="search_hint_label">Tap here to add people</string>

    <!-- Member row restrictions label -->
    <string name="restrictions_label">restriction</string>

    <!-- Notify Dialog -->
    <string name="notify_message_text_hint">Enter an additional message you\'d like to send with the Secret Santa assignments</string>
    <string name="characters_remaining_message_unformatted">Characters remaining: %d</string>
    <string name="notify_send_button_text">Send</string>
    <string name="no_email_warning">WARNING: Assignments won\'t be sent. We can\'t find your Gmail account</string>
    <string name="notify_email_from_label">From:</string>
    <string name="notify_dialog_title">Notify Group</string>
    <string name="notify_selection_dialog_title_unformatted" formatted="false">Notify (%d %s)</string>

    <!-- SMS Permissions -->
    <string name="sms_permissions_warning_title">Important</string>
    <string name="sms_permissions_warning_msg">To send assignments using SMS without them showing up in your conversation history, Open Secret Santa needs to temporarily become your default SMS app.
        \n\nTo allow this, please accept the system dialog prompts as they appear.</string>
    <string name="sms_permissions_dont_show_again">Don\'t show this again</string>
    <string name="sms_default_app_warning">You currently cannot receive any SMS messages on this device as Open Secret Santa is your SMS app.</string>
    <string name="fix_it">Fix it</string>
    <string name="sms_default_setting_revert_failed">Sorry, we couldn\'t revert your setting automatically. Use your device\'s Settings app to change your default SMS app.</string>

    <!-- Edit screen -->
    <string name="contact_method_label">Notify using</string>
    <string name="member_name_label">Member Name</string>
    <string name="member_name_hint">Name</string>
    <string name="member_contact_details_hint">Contact Details</string>
    <string name="edit_email_address_hint">Email Address</string>
    <string name="edit_sms_number_hint">Mobile Number</string>

    <!-- Clear assignments confirmation dialog -->
    <string name="clear_assignments_dialog_title">Clear Assignments</string>
    <string name="clear_assignments_dialog_msg">You\'ll lose all the Secret Santa assignments for this group"</string>

    <!-- Delete Group confirmation dialog -->
    <string name="delete_group_dialog_title">Delete Group</string>
    <string name="delete_group_dialog_msg">You\'ll lose all the members and assignments for this group"</string>

    <!-- Delete members confirmation dialog -->
    <string name="delete_selection_dialog_title_unformatted" formatted="false">Delete (%d %s)</string>
    <string name="delete_members_confirm_msg_unformatted" formatted="false">Remove the %s from the group?</string>

    <!-- Rename Group -->
    <string name="rename_group_dialog_title">Rename Group</string>
    <string name="rename_group_name_hint">Group name</string>

    <!-- Preferences App Info -->
    <string name="setting_category_title_app_information">App Information</string>
    <string name="setting_summary_version_number">Version number and credits</string>
    <string name="setting_title_about">About</string>
    <string name="setting_summary_legal_information">Legal information</string>
    <string name="setting_title_legal">Legal</string>
    <string name="app_name">Open Secret Santa</string>
    <string name="credits">By Peter and Melissa from Many Object and Code</string>
    <string name="fb_contact">www.facebook.com/manyobjectandcode</string>
    <string name="email_contact">manyobjectandcode@gmail.com</string>
    <string name="app_version_info">Version: 3.1</string>
    <string name="app_date_info">Date: 30th November 2014</string>
    <string name="contact_us_at">Contact us at:</string>

    <!-- Preferences - Algorithm -->
    <string name="setting_category_title_algorithm">Algorithm</string>
    <string name="setting_title_draw_engine">Draw Engine</string>
    <string name="setting_summary_draw_algorithm">The algorithm that is used to calculate your draws</string>
    <string name="setting_dialog_title_draw_engine">Draw Engine</string>
    <string name="defaultDrawEngine">com.moac.drawengine.BasicDrawEngine</string>

    <!-- Preferences - Email -->
    <string name="gmail_account_preference">gmail_account_preference</string>

    <!-- LEGACY - Preferences SMS (no longer configurable) -->
    <string name="use_multipart_sms">Use Multipart SMS</string>

    <!-- Accessibility hints -->
    <string name="drawer_open_accesshint">open drawer</string>
    <string name="drawer_close_accesshint">close drawer</string>
    <string name="member_avatar_accesshint">member avatar</string>
    <string name="assignment_avatar_accesshint">Assignment Avatar</string>

    <!-- Menu labels -->
    <string name="menu_ok">OK</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_restrictions">Restrictions</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_notify_group">Notify group</string>
    <string name="menu_notify_selected">Notify selection</string>
    <string name="menu_assign">Assign</string>
    <string name="menu_reveal">Reveal</string>
    <string name="menu_rename">Rename group</string>
    <string name="menu_clear_assignments">Clear assignments</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_group">Delete group</string>
    <string name="menu_cancel">Cancel</string>

    <!-- Toast messages -->
    <string name="duplicate_name_msg_unformatted" formatted="false">%s is already in the draw</string>
    <string name="member_add_msg_unformatted" formatted="false">%s added</string>
    <string name="failed_add_member_msg_unformatted" formatted="false">Failed to add %s</string>
    <string name="draw_failed_msg">"Couldn't complete the draw"</string>
    <string name="draw_success_msg">Draw was successful</string>
    <string name="draw_engine_init_error_msg">Could not find Draw Engine</string>
    <string name="generic_notify_error_msg">An error occurred when sending the assignments</string>

    <!-- Assignment Messages -->
    <string name="sms_assignment_msg_unformatted" formatted="false">Hi %s, you\'re giving a gift to %s. Sent via the Open Secret Santa app.</string>
    <string name="email_assignment_msg_unformatted" formatted="false">Hi %s, you\'re giving a gift to %s.</string>
    <string name="email_footer_msg"><![CDATA[<br><br><hr><p>Organizing your own Secret Santa? Get the free Open Secret Santa Android app on <a href="https://play.google.com/store/apps/details?id=com.moac.android.opensecretsanta">Google Play</a>!</p>]]></string>
    <string name="email_subject_msg">Your Secret Santa assignment, courtesy of Open Secret Santa</string>

    <!-- Progress Dialog Messages -->
    <string name="draw_in_progress_msg">Drawing assignments</string>
    <string name="notify_in_progress_msg">Sending assignments</string>

    <!-- Drawer List -->
    <string name="drawer_groups_header">My Groups</string>
    <string name="drawer_groups_new">New Group</string>
    <string name="base_group_name">My Group</string>
    <string name="add_group">Create new group</string>

    <!-- Restrictions list -->
    <string name="restriction_list_title_unformatted" formatted="false">Set restrictions for %s</string>
    <string name="list_selection_count_title_unformatted" formatted="false">%d selected</string>
    <string name="gift_giving_msg_unformatted" formatted="false">%s is giving a gift to</string>
    <string name="empty_restrictions_list_msg">There\'s no-one else in the group!</string>


</resources>