<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <PreferenceCategory android:title="@string/setting_category_title_app_information">
        <PreferenceScreen
            android:summary="@string/setting_summary_version_number"
            android:title="@string/setting_title_about">

            <PreferenceScreen
                android:layout="@layout/layout_about"
                android:selectable="false" />
        </PreferenceScreen>

        <PreferenceScreen
            android:summary="@string/setting_summary_legal_information"
            android:title="@string/setting_title_legal">

            <PreferenceScreen
                android:layout="@layout/layout_legal"
                android:selectable="false" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_category_title_algorithm">
        <ListPreference
            android:defaultValue="@string/defaultDrawEngine"
            android:dialogTitle="@string/setting_dialog_title_draw_engine"
            android:entries="@array/engine_names"
            android:entryValues="@array/engine_classes"
            android:key="engine_preference"
            android:summary="@string/setting_summary_draw_algorithm"
            android:title="@string/setting_title_draw_engine" />
    </PreferenceCategory>

</PreferenceScreen>