<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/content_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_avatar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center|top"
            android:scaleType="centerCrop" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingTop="8dp"
                    android:text="@string/member_name_label"
                    android:textColor="@android:color/holo_blue_light" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_blue_light" />

                <EditText
                    android:id="@+id/et_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoText="false"
                    android:capitalize="words"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/member_name_hint"
                    android:inputType="textNoSuggestions|textCapWords|textPersonName"
                    android:paddingTop="8dp"
                    android:singleLine="true"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/shade_of_grey4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="32dp"
                    android:text="@string/contact_method_label"
                    android:textColor="@android:color/holo_blue_light" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_blue_light" />

                <Spinner
                    android:id="@+id/spnr_contact_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingTop="8dp" />

                <View
                    android:id="@+id/contact_details_separator_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/holo_blue_light"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_edit_contact_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:hint="@string/member_contact_details_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/dark_grey"
                    android:textColorHint="@color/shade_of_grey4"
                    android:visibility="invisible" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
